<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">零点侦测系统</string>
    <string name="scan">scan</string>
    <string name="single">single</string>
    <string name="title_activity_map">地图</string>
    <string name="title_activity_single_measure">单频测量</string>
    <string name="title_activity_freq_scan">频段扫描</string>
    <string name="ButtonTextYes">是</string>
    <string name="ButtonTextNo">否</string>
    <string name="title_activity_param__dialog">参数设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dialog">对话框</string>
    <string name="ButtonTextDot">.</string>
    <string name="ButtonTextOne">1</string>
    <string name="ButtonTextTwo">2</string>
    <string name="ButtonTextThree">3</string>
    <string name="ButtonTextFour">4</string>
    <string name="ButtonTextFive">5</string>
    <string name="ButtonTextSix">6</string>
    <string name="ButtonTextSeven">7</string>
    <string name="ButtonTextEight">8</string>
    <string name="ButtonTextNine">9</string>
    <string name="ButtonTextZero">0</string>
    <string name="ButtonTextDoubleZero">00</string>
    <string name="ButtonTextGHZ">GHz</string>
    <string name="ButtonTextMHZ">MHz</string>
    <string name="ButtonTextKHZ">KHz</string>
    <string name="ButtonTextback"><![CDATA[<<]]></string>
    <string name="ButtonTextClose">X</string>
    <string name="center_freq">中心频率</string>
    <string name="freq_bandwidth">频谱带宽</string>
    <string name="filter_bandwidth">滤波带宽</string>
    <string name="attenuation_control">衰减控制</string>
    <string name="demodulation_mode">解调模式</string>
    <string name="squelch_threshold">静噪门限</string>
    <string name="sound_title">声音</string>
    <string name="offlinemap">离线地图</string>
    <string name="about">关于</string>
    <string name="title_activity_about">关于</string>
    <string name="device_conn_err">设备断开链接</string>
    <string name="device_conn_ok">设备连接成功</string>
    <string name="company">成都零点科技有限公司</string>
    <string name="sound">声音</string>
    <string name="install">安装</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="install_tip">设备不支持中文语用播报，点击安装按钮完成中文语音的安装</string>
    <string name="setting_tip">中文语音包已经安装完成，点击设置，完成操作</string>
    <string name="error">不支持语音播报</string>
    <string name="level_avg">电平平均</string>
    <string name="menu_setting">设置</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_server_udp_port">UDP端口</string>
    <string name="setting_server_tcp_port">TCP端口</string>
    <string name="setting_server_ip">设备地址</string>
    <string name="string_ok">确定</string>
    <string name="string_cancel">取消</string>


    <!-- TODO: Remove or change this placeholder text -->

</resources>